8224179: Shenandoah: CTW test failures with traversal GC

Reviewed-by: shade